Complete the project

--- a/sell.html
+++ b/sell.html
@@ -37,7 +37,7 @@
       <form>
         <div id="name" class="field">
           <label for="name">Product Name</label>
-          <input type="text" name="name" value="Name of product">
+          <input type="text" name="name" placeholder="Name of product">
         </div>
         <div id="price" class="field">
           <label for="price">Price</label>
