--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="image-container">
         <a href="./index.html"><img src="https://s3.amazonaws.com/codecademy-content/programs/ui-design/ui-conventions/img/logo.svg"></a>
       </div>
+      <h1>The freshest deals at the freshest prices</h1>
       <a href="" class="button cart">Cart <img src="https://s3.amazonaws.com/codecademy-content/programs/ui-design/ui-conventions/img/cart.svg"></a>
     </header>
     <nav>
@@ -132,6 +133,7 @@
       <div class="links">
         <h4>Get to know us</h4>
         <a href="about.html">About us</a>
+        <a href="jobs.html">Jobs</a>
         <a href="#">Investor relations</a>
         <a href="#">Link</a>
       </div>
